--- a/index.html
+++ b/index.html
@@ -79,7 +79,52 @@
                   <use href="./images/icons.svg#iconcloseblack18"></use>
                 </svg>
               </button>
+                        <section class="contact-section">
+              <strong class="contact-header">Leave your contacts and we will call you back</strong>
+            <form class="contact-form" name="yuor_contacts">
+            
+              <div class="contact-field-name">
+                  <label> <span class="contact-note">Name
+            </span>    
+                         <input type="text" name="user_name">
+            </label>
+          </div> 
+          <div class="contact-field">
+             <label >
+              <span class="contact-note">
+                Phone</span>             
+              <input type="tel" name="user_tel">
+            </label>
+          </div>
+          <div class="contact-field">
+             <label> 
+              <span class="contact-note">Email
+            </span>
+            <input type="email" name="user_email">
+             </label>
             </div>
+            <div class="contact-field">
+             <label>
+              <span class="contact-note">Comment</span>
+             <textarea name="user_comment"  rows="10" placeholder="Text input"></textarea>
+            </label>
+          </div>   
+          <div class="contact-field-accept">       
+            <label class="contact-accept" >
+              <input type="checkbox" name="user_accept">
+              <span class="contact-note">
+                I accept the terms and conditions of the
+                </span>
+                <a class="contact-note contact-note-link" href="">Privacy Policy</a>
+            </label>
+          </div>   
+            <button class="contact-button" type="submit">Send
+            </button>
+            </form>
+          </section>
+        </div>
+
+        </div>
           </div>
         </div>
       </section>
@@ -547,6 +592,20 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <form>
+          <p class="note-small note-smal-footer">Subscribe</p>
+          <div class="footer-email">
+          <label >
+            <input type="email" name="subscribe_email" placeholder="E-mail"></label>
+          <button class="subscribe-btn" type="submit">Subscribe
+            <svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#iconframe"></use>
+            </svg>
+            </div>
+          </button>
+        </form>
         </div>
       </div>
     </footer>
