--- a/index.html
+++ b/index.html
@@ -84,38 +84,65 @@
             <form class="contact-form" name="yuor_contacts">
             
               <div class="contact-field-name">
-                  <label> <span class="contact-note">Name
+                  <label> 
+
+                    <span class="contact-note">Name
             </span>    
-                         <input type="text" name="user_name">
-            </label>
+            <div class="contact-name">
+                         <input  class="contact-size" type="text" name="user_name">
+                       <svg class="name-icon" width="18" height="18">
+                  <use href="./images/icons.svg#iconpersonblack"></use>
+                </svg>
+              </div>
+              </label>
           </div> 
           <div class="contact-field">
              <label >
               <span class="contact-note">
-                Phone</span>             
-              <input type="tel" name="user_tel">
+                Phone</span>   
+                <div class="contact-phone">          
+              <input class="contact-size" type="tel" name="user_tel">
+               <svg class="tel-icon" width="18" height="18">
+                  <use href="./images/icons.svg#iconphoneblack"></use>
+                </svg>
+              </div> 
             </label>
           </div>
           <div class="contact-field">
              <label> 
               <span class="contact-note">Email
             </span>
-            <input type="email" name="user_email">
+            <div class="contact-email">
+            <input  class="contact-size" type="email" name="user_email">
+            <svg class="email-icon" width="18" height="18">
+                  <use href="./images/icons.svg#iconemailblack"></use>
+                </svg>
+              </div>
              </label>
             </div>
             <div class="contact-field">
              <label>
               <span class="contact-note">Comment</span>
-             <textarea name="user_comment"  rows="10" placeholder="Text input"></textarea>
+             <textarea class="contact-size contact-comment" name="user_comment"  rows="10"  placeholder="Text input"></textarea>
             </label>
           </div>   
           <div class="contact-field-accept">       
             <label class="contact-accept" >
-              <input type="checkbox" name="user_accept">
+              <div>
+              <input class="contact-accept-box" type="checkbox" name="user_accept">
+              <svg class="chekbox-icon" width="16" height="16">
+                <use class="chekbox-icon-on"
+                 href="./images/icons.svg#iconcheckbox"></use>
+                <use class="chekbox-icon-off"
+                href="./images/icons.svg#iconcheckboxnone"></use>
+              </svg>
+            </div>
+            <div>
               <span class="contact-note">
-                I accept the terms and conditions of the
+               I accept the terms and conditions of the
                 </span>
                 <a class="contact-note contact-note-link" href="">Privacy Policy</a>
+              </div>
             </label>
           </div>   
             <button class="contact-button" type="submit">Send
@@ -598,7 +625,7 @@
           <p class="note-small note-smal-footer">Subscribe</p>
           <div class="footer-email">
           <label >
-            <input type="email" name="subscribe_email" placeholder="E-mail"></label>
+            <input class="subscribe-email" type="email" name="subscribe_email" placeholder="E-mail"></label>
           <button class="subscribe-btn" type="submit">Subscribe
             <svg class="subscribe-icon" width="24" height="24">
               <use href="./images/icons.svg#iconframe"></use>
