--- a/portfolio.html
+++ b/portfolio.html
@@ -377,7 +377,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <form>
+          <p class="note-small note-smal-footer">Subscribe</p>
+          <div class="footer-email">
+          <label >
+            <input class="subscribe-email" type="email" name="subscribe_email" placeholder="E-mail"></label>
+          <button class="subscribe-btn" type="submit">Subscribe
+            <svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#iconframe"></use>
+            </svg>
+            </div>
+          </button>
+        </form>
+        </div>
       </div>
+
+      </div>      
     </footer>
   </body>
 </html>
