--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
           </div>   
           <div class="contact-field-accept">       
             <label class="contact-accept" >
-              <div>
+              <div class="contact-box">
               <input class="contact-accept-box" type="checkbox" name="user_accept">
-              <svg class="chekbox-icon" width="16" height="16">
-                <use class="chekbox-icon-on"
-                 href="./images/icons.svg#iconcheckbox"></use>
+              <!-- <svg class="chekbox-icon" width="16" height="16">
                 <use class="chekbox-icon-off"
                 href="./images/icons.svg#iconcheckboxnone"></use>
               </svg>
-            </div>
+                <use class="chekbox-icon-on"
+                 href="./images/icons.svg#iconcheckbox"></use> -->
+                            </div>
             <div>
               <span class="contact-note">
                I accept the terms and conditions of the
