--- a/portfolio.html
+++ b/portfolio.html
@@ -92,23 +92,22 @@
 
           <ul class="list img-marketing-size">
             <li class="img-marketing-item">
-              <div class="marketing-card">
-              
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgba.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgba.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">
                     Banking App Interface Concept
@@ -116,25 +115,24 @@
                   <p class="paragraff-portfolio">App</p>
                 </div>
               </a>
-              
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgbb.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgbb.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-             </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Cashless Payment</h2>
                   <p class="paragraff-portfolio">Marketing</p>
@@ -142,22 +140,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgbc.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgbc.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Meditation App</h2>
                   <p class="paragraff-portfolio">App</p>
@@ -165,22 +163,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/taxi.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Taxi Service</h2>
                   <p class="paragraff-portfolio">Marketing</p>
@@ -188,22 +186,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/scret.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/scret.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">
                     Screen Illustrations
@@ -213,22 +211,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
-                <a href="" class="link link-marketing">
-                <img
-                  src="./images/course.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+              <a href="" class="link link-marketing">
+                <div class="marketing-card">
+                  <img
+                    src="./images/course.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Online Courses</h2>
                   <p class="paragraff-portfolio">Marketing</p>
@@ -236,22 +234,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgdda.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgdda.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">
                     Instagram Stories Concept
@@ -261,22 +259,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgddb.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgddb.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Organic Food</h2>
                   <p class="paragraff-portfolio">Web Site</p>
@@ -284,22 +282,22 @@
               </a>
             </li>
             <li class="img-marketing-item">
-              <div class="marketing-card">
               <a href="" class="link link-marketing">
-                <img
-                  src="./images/imgddc.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-maketing">               
-                  <p class="paragraff-marketing">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                  </p>
+                <div class="marketing-card">
+                  <img
+                    src="./images/imgddc.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-maketing">
+                    <p class="paragraff-marketing">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-              </div>
+                </div>
                 <div class="marketing-sign">
                   <h2 class="note-medium note-medium-sign">Fresh Coffee</h2>
                   <p class="paragraff-portfolio">Web Site</p>
@@ -378,22 +376,24 @@
           </ul>
         </div>
         <div class="footer-form">
-          <form>
           <p class="note-small note-smal-footer">Subscribe</p>
-          <div class="footer-email">
-          <label >
-            <input class="subscribe-email" type="email" name="subscribe_email" placeholder="E-mail"></label>
-          <button class="subscribe-btn" type="submit">Subscribe
-            <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/icons.svg#iconframe"></use>
-            </svg>
-            </div>
-          </button>
-        </form>
+          <form class="footer-email">
+            <label>
+              <input
+                class="subscribe-email"
+                type="email"
+                name="subscribe_email"
+                placeholder="E-mail"
+            /></label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#iconframe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
-
-      </div>      
     </footer>
   </body>
 </html>
