--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <section class="hero-dark-bg">
         <div class="container">
           <h1 class="my-inscription">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button" data-modal-open>Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
           <!-- Modal window -->
           <div class="modal-backrod is-hidden" data-modal>
             <div class="studio-window">
@@ -79,79 +81,71 @@
                   <use href="./images/icons.svg#iconcloseblack18"></use>
                 </svg>
               </button>
-                        <section class="contact-section">
-              <strong class="contact-header">Leave your contacts and we will call you back</strong>
-            <form class="contact-form" name="yuor_contacts">
-            
-              <div class="contact-field-name">
-                  <label> 
+              <strong class="contact-header"
+                >Leave your contacts and we will call you back</strong
+              >
+              <form class="contact-form" name="yuor_contacts">
+                <label class="contact-field-name">
+                  <span class="contact-note">Name </span>
+                  <input class="contact-size" type="text" name="user_name" />
+                  <svg class="name-icon" width="18" height="24">
+                    <use href="./images/icons.svg#iconpersonblack"></use>
+                  </svg>
+                </label>
+                <div class="contact-field">
+                  <label class="contact-phone">
+                    <span class="contact-note"> Phone</span>
+                    <input class="contact-size" type="tel" name="user_tel" />
+                    <svg class="tel-icon" width="18" height="24">
+                      <use href="./images/icons.svg#iconphoneblack"></use>
+                    </svg>
+                  </label>
+                </div>
+                <div class="contact-field">
+                  <label class="contact-email">
+                    <span class="contact-note">Email </span>
 
-                    <span class="contact-note">Name
-            </span>    
-            <div class="contact-name">
-                         <input  class="contact-size" type="text" name="user_name">
-                       <svg class="name-icon" width="18" height="18">
-                  <use href="./images/icons.svg#iconpersonblack"></use>
-                </svg>
-              </div>
-              </label>
-          </div> 
-          <div class="contact-field">
-             <label >
-              <span class="contact-note">
-                Phone</span>   
-                <div class="contact-phone">          
-              <input class="contact-size" type="tel" name="user_tel">
-               <svg class="tel-icon" width="18" height="18">
-                  <use href="./images/icons.svg#iconphoneblack"></use>
-                </svg>
-              </div> 
-            </label>
-          </div>
-          <div class="contact-field">
-             <label> 
-              <span class="contact-note">Email
-            </span>
-            <div class="contact-email">
-            <input  class="contact-size" type="email" name="user_email">
-            <svg class="email-icon" width="18" height="18">
-                  <use href="./images/icons.svg#iconemailblack"></use>
-                </svg>
-              </div>
-             </label>
+                    <input
+                      class="contact-size"
+                      type="email"
+                      name="user_email"
+                    />
+                    <svg class="email-icon" width="18" height="24">
+                      <use href="./images/icons.svg#iconemailblack"></use>
+                    </svg>
+                  </label>
+                </div>
+                <div class="contact-field">
+                  <label>
+                    <span class="contact-note">Comment</span>
+                    <textarea
+                      class="contact-size contact-comment"
+                      name="user_comment"
+                      rows="10"
+                      placeholder="Text input"
+                    ></textarea>
+                  </label>
+                </div>
+                <div class="contact-field-accept">
+                  <label class="contact-accept contact-box">
+                    <input
+                      class="contact-accept-box"
+                      type="checkbox"
+                      name="user_accept"
+                    />
+
+                    <span class="contact-note">
+                      I accept the terms and conditions of the
+
+                      <a class="contact-note contact-note-link" href=""
+                        >Privacy Policy</a
+                      >
+                    </span>
+                  </label>
+                </div>
+                <button class="contact-button" type="submit">Send</button>
+              </form>
             </div>
-            <div class="contact-field">
-             <label>
-              <span class="contact-note">Comment</span>
-             <textarea class="contact-size contact-comment" name="user_comment"  rows="10"  placeholder="Text input"></textarea>
-            </label>
-          </div>   
-          <div class="contact-field-accept">       
-            <label class="contact-accept" >
-              <div class="contact-box">
-              <input class="contact-accept-box" type="checkbox" name="user_accept">
-              <!-- <svg class="chekbox-icon" width="16" height="16">
-                <use class="chekbox-icon-off"
-                href="./images/icons.svg#iconcheckboxnone"></use>
-              </svg>
-                <use class="chekbox-icon-on"
-                 href="./images/icons.svg#iconcheckbox"></use> -->
-                            </div>
-            <div>
-              <span class="contact-note">
-               I accept the terms and conditions of the
-                </span>
-                <a class="contact-note contact-note-link" href="">Privacy Policy</a>
-              </div>
-            </label>
-          </div>   
-            <button class="contact-button" type="submit">Send
-            </button>
-            </form>
-          </section>
-        </div>
-
-        </div>
           </div>
         </div>
       </section>
@@ -621,18 +615,22 @@
           </ul>
         </div>
         <div class="footer-form">
-          <form>
           <p class="note-small note-smal-footer">Subscribe</p>
-          <div class="footer-email">
-          <label >
-            <input class="subscribe-email" type="email" name="subscribe_email" placeholder="E-mail"></label>
-          <button class="subscribe-btn" type="submit">Subscribe
-            <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/icons.svg#iconframe"></use>
-            </svg>
-            </div>
-          </button>
-        </form>
+          <form class="footer-email">
+            <label>
+              <input
+                class="subscribe-email"
+                type="email"
+                name="subscribe_email"
+                placeholder="E-mail"
+            /></label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#iconframe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
